don't show channel rec if no rec existed

--- a/src/app/common/components/channel-recommendation/channel-recommendation.component.html
+++ b/src/app/common/components/channel-recommendation/channel-recommendation.component.html
@@ -1,4 +1,4 @@
-<article>
+<article *ngIf="(channelRecommendations.result$ | async)?.suggestions?.length">
   <header>
     <h2>Recommended Channels</h2>
     <a [routerLink]="['/discovery/suggestions/user']">See more</a>
