--- a/src/app/modules/newsfeed/activity/modal/modal.component.html
+++ b/src/app/modules/newsfeed/activity/modal/modal.component.html
@@ -4,17 +4,13 @@
   *ngIf="entity && entity.content_type"
 >
   <div class="m-activityModal__theater" (click)="clickedModal($event)">
-    <div
-      class="m-activityModal m-activityModal__clearFix"
-      [style.height]="stageHeight + 'px'"
-    >
+    <div class="m-activityModal m-activityModal__clearFix">
       <!-- -------------------------------------------------- -->
       <!-- --LEFT SIDE--------------------------------------- -->
       <!-- -------------------------------------------------- -->
       <!-- (this is the element that goes into fullscreen) -->
       <div
         class="m-activityModal__stageWrapper"
-        [style.line-height]="stageHeight + 'px'"
         (mouseenter)="onMouseEnterStage()"
         (mouseleave)="onMouseLeaveStage()"
         (touchend)="showOverlaysOnTablet()"
@@ -71,7 +67,7 @@
                 activityService.shouldShowPaywallBadge$ | async
               "
               [@slowFade]="(this.service.loading$ | async) ? 'out' : 'in'"
-              [ngClass]="{ missingDimensions: mediaHeight === 0 }"
+              [maxHeightAllowed]="modalHeight"
             ></m-activity__content>
             <m-activity__modalQuote
               *ngIf="isQuote && entity"
