--- a/src/app/modules/comments/thread/thread.component.html
+++ b/src/app/modules/comments/thread/thread.component.html
@@ -10,19 +10,9 @@
   }"
   #scrollArea
 >
-  <m-comment__poster
-    #poster
-    *ngIf="activityService.allowComment$ | async"
-    [guid]="guid"
-    [parent]="parent"
-    [entity]="entity"
-    [currentIndex]="comments.length - 1"
-    [conversation]="conversation"
-    [level]="level"
-    (posted)="onPosted($event)"
-    (optimisticPost)="onOptimisticPost($event)"
-  >
-  </m-comment__poster>
+  <ng-container *ngIf="direction === 'desc'">
+    <ng-container *ngTemplateOutlet="posterOutlet"></ng-container>
+  </ng-container>
 
   <!-- --------------------------------  -->
   <p class="m-comments--load-error-label" *ngIf="!inProgress && !!error">
@@ -41,10 +31,12 @@
   <!-- --------------------------------  -->
   <div
     class="m-comments__viewMore m-comments__viewMore--newer"
-    *ngIf="loadNext && showReplies"
+    *ngIf="
+      showReplies && direction === 'asc' ? loadPreviousToken : loadNextToken
+    "
   >
     <m-button
-      (onAction)="load(false)"
+      (onAction)="loadPrevious()"
       [saving]="ascendingInProgress"
       overlay="true"
       size="xsmall"
@@ -69,91 +61,108 @@
       </span>
     </m-button>
   </div>
-</div>
-<!-- --------------------------------  -->
 
-<ng-container *ngIf="showReplies">
-  <ng-container
-    *ngFor="
-      let comment of getComments()
-        .slice()
-        .reverse();
-      let i = index;
-      let first = first
+  <ng-container *ngIf="showReplies">
+    <ng-container
+      *ngFor="let comment of getComments(); let i = index; let first = first"
+    >
+      <m-comment
+        [comment]="comment"
+        [entity]="entity"
+        [parent]="parent"
+        [level]="level"
+        [canEdit]="canEdit"
+        [canDelete]="canDelete"
+        [showReplies]="comment.show_replies"
+        [compact]="compact"
+        (delete)="delete(i)"
+        (saved)="edited(i, $event)"
+        (onReply)="reply($event.comment)"
+        [poster]="poster"
+        (onHeightChange)="onHeightChange.emit($event)"
+        [ngClass]="{ 'm-commentsThreadComment--first': first && level === 0 }"
+      ></m-comment>
+    </ng-container>
+  </ng-container>
+  <!-- --------------------------------  -->
+  <div
+    class="m-comments__viewMore m-comments__viewMore--older"
+    *ngIf="
+      showReplies && direction === 'asc' ? loadNextToken : loadPreviousToken
     "
   >
-    <m-comment
-      [comment]="comment"
-      [entity]="entity"
-      [parent]="parent"
-      [level]="level"
-      [canEdit]="canEdit"
-      [canDelete]="canDelete"
-      [showReplies]="comment.show_replies"
-      [compact]="compact"
-      (delete)="delete(i)"
-      (saved)="edited(i, $event)"
-      (onReply)="reply($event.comment)"
-      [poster]="poster"
-      [ngClass]="{ 'm-commentsThreadComment--first': first && level === 0 }"
-    ></m-comment>
-  </ng-container>
-</ng-container>
-<!-- --------------------------------  -->
-<div
-  class="m-comments__viewMore m-comments__viewMore--older"
-  *ngIf="loadPrevious && showReplies"
->
-  <m-button
-    (onAction)="load(false, 'desc')"
-    [saving]="inProgress || descendingInProgress"
-    overlay="true"
-    size="xsmall"
+    <m-button
+      (onAction)="loadNext()"
+      [saving]="inProgress || descendingInProgress"
+      overlay="true"
+      size="xsmall"
+    >
+      <span *ngIf="!descendingInProgress && !loaded">
+        <ng-container *ngIf="!error"
+          ><ng-container i18n="@@MINDS__COMMENTS__VIEW_MORE_ACTION"
+            >View more</ng-container
+          ></ng-container
+        >
+        <ng-container *ngIf="error"
+          ><ng-container i18n="@@MINDS__COMMENTS__TRY_AGAIN_ACTION"
+            >Try again</ng-container
+          ></ng-container
+        >
+      </span>
+      <span *ngIf="!descendingInProgress && loaded">
+        <ng-container i18n="@@MINDS__COMMENTS__LOAD_EARLIER_ACTION"
+          >Load earlier</ng-container
+        >
+      </span>
+    </m-button>
+  </div>
+  <m-loadingSpinner
+    [inProgress]="inProgress"
+    *ngIf="inProgress && comments?.length === 0"
   >
-    <span *ngIf="!descendingInProgress && !loaded">
-      <ng-container *ngIf="!error"
-        ><ng-container i18n="@@MINDS__COMMENTS__VIEW_MORE_ACTION"
-          >View more</ng-container
-        ></ng-container
-      >
-      <ng-container *ngIf="error"
-        ><ng-container i18n="@@MINDS__COMMENTS__TRY_AGAIN_ACTION"
-          >Try again</ng-container
-        ></ng-container
-      >
-    </span>
-    <span *ngIf="!descendingInProgress && loaded">
-      <ng-container i18n="@@MINDS__COMMENTS__LOAD_EARLIER_ACTION"
-        >Load earlier</ng-container
-      >
-    </span>
-  </m-button>
-</div>
-<m-loadingSpinner
-  [inProgress]="inProgress"
-  *ngIf="inProgress && comments?.length === 0"
->
-</m-loadingSpinner>
+  </m-loadingSpinner>
 
-<!-- --------------------------------  -->
-<span *ngIf="sockets.error$ | async" class="m-commentsThread__connectionLost">
-  <ng-container i18n="@@MINDS__COMMENTS__NO_LIVE_COMMENTS"
-    >Could not load live comments</ng-container
-  >
-  <br />
-  <a
-    *ngIf="!inProgress"
-    (click)="retry()"
-    class="m-commentsThread__connectionLost--retry"
-    i18n="@@MINDS__COMMENTS__SOCKET_RETRY"
-  >
-    Click to retry
-  </a>
-  <span
-    [hidden]="!inProgress"
-    class="m-commentsThread__connectionLost--loading"
-    i18n="@@MINDS__COMMENTS__SOCKET_LOADING"
-  >
-    Loading...
+  <!-- --------------------------------  -->
+  <span *ngIf="sockets.error$ | async" class="m-commentsThread__connectionLost">
+    <ng-container i18n="@@MINDS__COMMENTS__NO_LIVE_COMMENTS"
+      >Could not load live comments</ng-container
+    >
+    <br />
+    <a
+      *ngIf="!inProgress"
+      (click)="retry()"
+      class="m-commentsThread__connectionLost--retry"
+      i18n="@@MINDS__COMMENTS__SOCKET_RETRY"
+    >
+      Click to retry
+    </a>
+    <span
+      [hidden]="!inProgress"
+      class="m-commentsThread__connectionLost--loading"
+      i18n="@@MINDS__COMMENTS__SOCKET_LOADING"
+    >
+      Loading...
+    </span>
   </span>
-</span>
+
+  <ng-container *ngIf="direction === 'asc'">
+    <ng-container *ngTemplateOutlet="posterOutlet"></ng-container>
+  </ng-container>
+</div>
+<!-- --------------------------------  -->
+
+<ng-template #posterOutlet>
+  <m-comment__poster
+    #poster
+    *ngIf="activityService.allowComment$ | async"
+    [guid]="guid"
+    [parent]="parent"
+    [entity]="entity"
+    [currentIndex]="comments.length - 1"
+    [conversation]="conversation"
+    [level]="level"
+    (posted)="onPosted($event)"
+    (optimisticPost)="onOptimisticPost($event)"
+  >
+  </m-comment__poster>
+</ng-template>
