--- a/src/app/modules/default-feed/container.component.html
+++ b/src/app/modules/default-feed/container.component.html
@@ -13,6 +13,11 @@
     <div class="m-pageLayoutPane__inner">
       <div class="m-pageLayoutPane__sticky" m-stickySidebar>
         <m-discovery__disclaimer></m-discovery__disclaimer>
+        <m-suggestions__sidebar
+          type="user"
+          customTitle="popular_channels"
+          *mExperiment="'channel-recommendations'; variation: false"
+        ></m-suggestions__sidebar>
       </div>
     </div>
   </div>
