--- a/src/app/modules/suggestions/channel-recommendation/channel-recommendation.component.html
+++ b/src/app/modules/suggestions/channel-recommendation/channel-recommendation.component.html
@@ -12,13 +12,19 @@
   <ul *ngIf="(recommendations$ | async).length">
     <li *ngFor="let channel of recommendations$ | async">
       <section>
-        <a [routerLink]="['/', channel.username]" class="m-channelRecommendation__avatarContainer">
+        <a
+          [routerLink]="['/', channel.username]"
+          class="m-channelRecommendation__avatarContainer"
+        >
           <m-hovercard [publisher]="channel" [offset]="[0, 15]">
             <minds-avatar [object]="channel" [editMode]="false"></minds-avatar>
           </m-hovercard>
         </a>
         <div class="m-channelRecommendation__contentContainer">
-          <a [routerLink]="['/', channel.username]" class="m-channelRecommendation__title">
+          <a
+            [routerLink]="['/', channel.username]"
+            class="m-channelRecommendation__title"
+          >
             <strong>{{ channel.name }}</strong>
             <m-channel--badges
               class="m-channel--badges-activity m-activityOwnerBlockDisplayName__badges"
@@ -26,7 +32,9 @@
               badges="[ 'admin', 'verified' ]"
             ></m-channel--badges>
           </a>
-          <span class="m-channelRecommendation__description">{{ channel.briefdescription }}</span>
+          <span class="m-channelRecommendation__description">{{
+            channel.briefdescription
+          }}</span>
           <!-- <span>@userA and @userB are subscribed</span> -->
         </div>
         <div class="m-channelRecommendation__subscribeContainer">
