WIP bridge swap modal

--- a/src/app/modules/wallet/components/network-swap-bridge/bridge/network-bridge-swap.ng.scss
+++ b/src/app/modules/wallet/components/network-swap-bridge/bridge/network-bridge-swap.ng.scss
@@ -1,8 +1,13 @@
 @import 'defaults.scss';
 
-::ng-deep .modal-content--bridge {
+::ng-deep .modal-content--swap {
   min-width: 710px;
   max-height: 526px;
+  height: 526px;
+
+  .modal-content {
+    height: inherit;
+  }
 }
 
 :host {
