--- a/src/app/modules/newsfeed/activity/modal/modal.component.html
+++ b/src/app/modules/newsfeed/activity/modal/modal.component.html
@@ -3,7 +3,7 @@
   data-cy="data-minds-activity-modal"
   *ngIf="entity && entity.content_type"
 >
-  <div class="m-activityModal__theater" (click)="clickedModal($event)">
+  <div class="m-activityModal__theater">
     <div class="m-activityModal m-activityModal__clearFix">
       <!-- -------------------------------------------------- -->
       <!-- --LEFT SIDE--------------------------------------- -->
