--- a/src/app/modules/wallet/components/network-swap-bridge/bridge/components/bridge-transfer/network-bridge-transfer.component.html
+++ b/src/app/modules/wallet/components/network-swap-bridge/bridge/components/bridge-transfer/network-bridge-transfer.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class="mdl-grid m-networkSwapBridge__container-row ">
       <img
-        class="mdl-cell mdl-cell--1-col"
+        class="mdl-cell mdl-cell--1-col m-networkSwapBridge__container-row-img"
         [src]="cdnAssetsUrl + entity.logoPath"
       />
       <h1 class="mdl-cell mdl-cell--5-col m-networkSwapBridge__title--swap">
@@ -16,8 +16,8 @@
         class="mdl-cell mdl-cell--5-col m-networkSwapBridge__transactions"
         *ngIf="entity.showHistoric"
       >
-        <span>Transactions</span>
-        <i class="material-icons">history</i>
+        <span (click)="navigateToTxHistory()">Transactions</span>
+        <i (click)="navigateToTxHistory()" class="material-icons">history</i>
         <img [src]="cdnAssetsUrl + 'assets/ext/ellipse.svg'" alt="ellipse" />
       </div>
     </div>
@@ -25,6 +25,5 @@
 
   <!-- MODAL COMPONENTS -->
   <m-networkSwapBox></m-networkSwapBox>
-
   <!-- <m-loadingSpinner [inProgress]="inProgress$ | async"></m-loadingSpinner> -->
 </div>
