--- a/src/app/modules/wire/button/button.component.html
+++ b/src/app/modules/wire/button/button.component.html
@@ -8,7 +8,8 @@
     <span>Wire</span>
   </ng-container>
   <ng-template #tipButton>
-    <span i18n="@@COMMON__TIP">Tip</span>
+    <!-- ojm uncomment below, show Tip if not activityV3Feature -->
+    <!-- <span i18n="@@COMMON__TIP">Tip</span> -->
     <i class="material-icons">attach_money</i>
   </ng-template>
 </button>
