--- a/src/stylesheets/defaults.scss
+++ b/src/stylesheets/defaults.scss
@@ -1,6 +1,8 @@
 @import 'themes';
 @import '../app/foundation/grid-values';
 @import 'z-index';
+@import 'typography';
+@import 'spacing';
 
 /**
  * Padding, Margins and Offset
